# mpdpopm

./: .gitignore  AUTHORS  ChangeLog  Dockerfile-arch  Makefile.am  NEWS  README.org  THANKS  bootstrap  configure.ac
.github/workflows/: ci.yml  release.yml
admin/: Dockerfile-arch  Dockerfile-debian  PKGBUILD.in  build-dev-arch-pkg  build-dev-arch-pkg-cnt  build-dev-debian-pkg  build-dev-debian-pkg-cnt  cargo-build-test-smoke  run-linters  signoff  test-aur-packages  test-aur-packages-cnt
admin/deb-maintainer-scripts/: postinst  prerm
doc/: .gitignore  Makefile.am  mpdpopm.texi  version.texi
etc/: mppopmd.conf.am.in  mppopmd.service.am.in
mpdpopm/: .gitignore  Cargo.toml.in  Makefile.am  build.rs
mpdpopm/src/: .gitignore  client.rs  clients.rs  commands.rs  config.rs  error_from.rs  filters.lalrpop  filters_ast.rs  lib.rs  messages.rs  playcounts.rs  ratings.rs  replstrings.rs  scribbu.rs  vars.rs.am.in  vars.rs.in
